--- a/APM-WithRefresh/src/app/home/menu.component.html
+++ b/APM-WithRefresh/src/app/home/menu.component.html
@@ -2,15 +2,21 @@
     <a class="navbar-brand">{{pageTitle}}</a>
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link"
-               [routerLink]="['/welcome']"
-               routerLinkActive="active">Home</a>
+          <a class="nav-link"
+             [routerLink]="['/welcome']"
+             routerLinkActive="active">Home</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               [routerLink]="['/products', 0]"
-               routerLinkActive="active"
-               [routerLinkActiveOptions]="{ exact : true}">Product List</a>
-        </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           [routerLink]="['/products', 0]"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{ exact : true}">Product List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           [routerLink]="['/cars', 0]"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{ exact : true}">Cars List</a>
+      </li>
     </ul>
 </nav>
