show supplier details, add toys tab initial structure

--- a/APM-WithRefresh/src/app/cars/car-container/car-container.component.html
+++ b/APM-WithRefresh/src/app/cars/car-container/car-container.component.html
@@ -4,5 +4,6 @@
   </div>
   <div class='col-md-10'>
     <pm-car-detail></pm-car-detail>
+    <pm-supplier-detail></pm-supplier-detail>
   </div>
 </div>
