--- a/APM-WithRefresh/src/app/home/menu.component.html
+++ b/APM-WithRefresh/src/app/home/menu.component.html
@@ -18,5 +18,11 @@
            routerLinkActive="active"
            [routerLinkActiveOptions]="{ exact : true}">Cars List</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           [routerLink]="['/toys', 0]"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{ exact : true}">Toys List</a>
+      </li>
     </ul>
 </nav>
