prepared for "load entities with category names" kata
(aka removed all logic, left only skeleton)

--- a/APM-WithRefresh/src/app/cars/car-detail/car-detail.component.html
+++ b/APM-WithRefresh/src/app/cars/car-detail/car-detail.component.html
@@ -8,7 +8,7 @@
 
     <div class="row">
       <div class="col-md-2">Name:</div>
-      <div class="col-md-6">{{vm.ca-r.carName}}</div>
+      <div class="col-md-6">{{vm.car.carName}}</div>
     </div>
     <div class="row">
       <div class="col-md-2">Code:</div>
