added more tests, created toys with categories

--- a/APM-WithRefresh/src/app/toys/toy-list/toy-list.component.html
+++ b/APM-WithRefresh/src/app/toys/toy-list/toy-list.component.html
@@ -3,12 +3,12 @@
     {{pageTitle}}
   </div>
 
-  <div class='card-body' *ngIf="toys$|async as toys">
+  <div class='card-body' *ngIf="toysWithCategories$|async as toys">
     <div class='list-group'>
       <button type='button'
               *ngFor="let toy of toys"
               class='list-group-item'>
-        {{toy.toyName}}
+        {{toy.toyName}} ({{toy.category}})
       </button>
     </div>
 
