--- a/APM-WithRefresh/src/styles.css
+++ b/APM-WithRefresh/src/styles.css
@@ -17,3 +17,6 @@ div.card {
 .pointer-on-hover {
   cursor: pointer;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
