--- a/APM-WithRefresh/src/app/suppliers/supplier-detail/supplier-detail.component.html
+++ b/APM-WithRefresh/src/app/suppliers/supplier-detail/supplier-detail.component.html
@@ -20,6 +20,15 @@
   </div>
 
   <div class="card-footer">
-    This is the footer
+    <div class="example-container">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter your email</mat-label>
+        <input matInput placeholder="pat@example.com" [formControl]="email" required>
+        <!--        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>-->
+        <div *ngIf="email.errors.isExists">
+          The name of this car exists.
+        </div>
+      </mat-form-field>
+    </div>
   </div>
 </div>
